# Fabio-Monreal

./: .gitignore  .vercelignore  README.md  astro.config.mjs  generate_pdf.py  index.html  index_en.html  package-lock.json  package.json  pyproject.toml  robots.txt  sitemap.xml  tailwind.config.mjs  vercel.json
api/: sitemap.js
assets/css/: print.css  styles.css
content/posts/: arquitetura-multi-cloud-com-governanca.md  ataque-de-tempest-enxergando-atraves-das-paredes.md  finops-como-disciplina-de-resiliencia.md  genai-soberana-e-zero-data-leakage.md  tempest-attack-seeing-through-walls.md
public/assets/css/: print.css  styles.css
public/assets/js/: main.js
public/resumo/en/: index.html
public/resumo/pt/: index.html
public/resumo/pt/perito/: index.html
scripts/: build-resumo.mjs  port-main-to-sobre.mjs
sobre/: Fabio_Monreal_PMC.html  Fabio_Monreal_PMC_en.html  Fabio_Monreal_Perito.html  generate_pdf.py  index.html  index_en.html
src/: content.config.ts
src/components/: Footer.astro  Header.astro  PostCard.astro  SeoHead.astro
src/layouts/: BaseLayout.astro  PostLayout.astro
src/lib/: about-content.ts  home-schema.ts  locale-switch.ts  post-page.ts  posts.ts  site.ts
src/pages/: index.astro  robots.txt.ts
src/pages/en/: index.astro
src/pages/en/posts/: [slug].astro  index.astro
src/pages/en/sobre/: index.astro
src/pages/posts/: [slug].astro  index.astro
src/pages/sobre/: index.astro
src/styles/: global.css
